--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,7 @@ edition = "2021"
 anyhow = "1.0.86"
 clap = { version = "4.5.16", features = ["derive"] }
 flate2 = "1.0"
+hex = "0.4.3"
+hex-literal = "0.4.1"
+sha1 = "0.10.6"
 
